--- a/index.html
+++ b/index.html
@@ -33,5 +33,41 @@
           </ul>
           <button class="sign-in btn"><i class="icon-user fa-regular fa-user"></i>Sign in</button>
     </nav>
+    <div class="jumbo">
+        <div class="jumbo-content">
+          <h1>Painter Essentials 8</h1>
+          <h2>Beginner painting software for Windows</h2>
+          <ul>
+            <li>Easy to use interface</li>
+            <li>Industry-acclaimed brushes</li>
+            <li>Incredible painting speed</li>
+            <li>Extensive built-in learning resources</li>
+            <li>AI-based photo painting</li>
+          </ul>
+          <button class="btn download">Download trial <i class="fa-solid fa-download"></i></button>
+        </div>
+      </div>
+       </header>
+       <main>
+        <nav class="main">
+    <ul class="main-menu">
+      <li class="main-menu-item">
+        <a href="">Overview</a>
+      </li>
+      <li class="main-menu-item">
+        <a href="">What's New</a>
+      </li>
+      <li class="main-menu-item">
+        <a href="">Compare</a>
+      </li>
+      <li class="main-menu-item">
+        <a href="">Tech Specs</a>
+      </li>
+      <li class="main-menu-item">
+        <a href="">Gallery</a>
+      </li>
+    </ul>
+        </nav>
+     </main>
 </body>
 </html>
